frontend_tests/negative/excluded_cgo/go.mod
module example.com/renvotests/negative/cgo

go 1.25
